# holdem-bench

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: integration.yml  lint.yml  scorecard.yml  test.yml  types.yml
docs/: methodology.md  reproducibility.md
docs/design/: 2026-04-22-holdembench-design.md
docs/handoff/: 2026-04-23-phase-1-handoff.md
docs/pricing-snapshots/: 2026-04-23-provider-prices.md
docs/reviews/: 2026-04-22-phase-0-review.md  follow-ups.md
evals/: smoke-cheap-tier.yaml  smoke-openrouter-only.yaml  stub-phase0-smoke.yaml
src/holdembench/: __init__.py  cli.py  credentials.py  types.py
src/holdembench/agents/: __init__.py  anthropic.py  base.py  base_adapter.py  (+9 more)
tests/: conftest.py
tests/contract/: test_anthropic_agent.py  test_base_adapter.py  test_google_agent.py  test_human_agent.py  test_moonshot_agent.py  test_openai_agent.py  test_openai_compat_subclasses.py  test_output_schema.py  test_prompt_rendering.py
tests/golden/: test_golden.py
tests/integration/: test_decision_context_carries_history.py  test_end_to_end.py  test_event_ordering_state_machine.py  test_runner.py  test_runner_budget_and_summary.py  test_runner_cost_accounting.py  test_session_context_refresh.py
tests/property/: test_canonical_log_token_budget.py  test_chat_budget_properties.py  test_chip_conservation.py  test_event_log_properties.py  test_legal_action_properties.py
tests/unit/: test_agent_base.py  test_apply_raw_to_table.py  test_bootstrap_ci.py  test_canned_talk.py  test_chip_ev.py  test_cli.py  test_content.py  test_credentials.py  test_deck.py  test_ev_adjustment.py  test_event_log.py  test_event_schema.py  test_gto_approx.py  test_manifest.py  test_multi_way_elo.py  test_pricing_sheet.py  test_protocol.py  test_random_agent.py  test_runner_p1_fixes.py  test_sanity.py  test_table.py  test_tight_passive.py  test_tokenizer.py  test_tournament_config.py  test_types.py  test_validator.py
(+36 files in other folders)
