[project]
name = "holdembench"
version = "0.1.0"
description = "HoldEmBench — a No-Limit Texas Hold'em benchmark for LLMs with natural-language table-talk"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.14"
authors = [{ name = "Alex Carter", email = "alex@alexander-carter.co.uk" }]
keywords = ["llm", "benchmark", "poker", "eval", "texas-holdem"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pokerkit>=0.7,<0.8",
  "pydantic>=2.7,<3",
  "tiktoken>=0.7,<1",
  "numpy>=1.26,<3",
  "scipy>=1.13,<2",
  "click>=8.1,<9",
  "pyyaml>=6.0,<7",
  "anthropic>=0.50,<2",
  "openai>=2.0,<3",
  "google-genai>=1.0,<3",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=5,<6",
  "pytest-asyncio>=0.23,<1",
  "hypothesis>=6.100,<7",
  "ruff>=0.15,<1",
  "pyright>=1.1.370,<2",
  "pre-commit>=3.7,<5",
]

[project.scripts]
holdembench = "holdembench.cli:cli"

[project.urls]
Repository = "https://github.com/ac2522/holdem-bench"
Documentation = "https://github.com/ac2522/holdem-bench/tree/main/docs"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/holdembench"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PT", "RET", "PL"]
ignore = ["PLR0913"]

[tool.pyright]
pythonVersion = "3.12"
include = ["src", "tests"]
strict = ["src"]
reportMissingTypeStubs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=holdembench --cov-report=term-missing"
asyncio_mode = "auto"
markers = [
  "smoke: real-model smoke tests (not run by default)",
  "slow: slow tests",
]
